[gd_scene load_steps=4 format=3 uid="uid://cutqd57p4tkce"]

[ext_resource type="Script" path="res://main.gd" id="1_xhrul"]
[ext_resource type="PackedScene" uid="uid://c1nttsdmiyjeh" path="res://player/player.tscn" id="2_21n7v"]
[ext_resource type="PackedScene" uid="uid://d803hvqlkoe0" path="res://enempy/enemy_container.tscn" id="3_bncns"]

[node name="main" type="Node2D"]
script = ExtResource("1_xhrul")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(808, 576)
zoom = Vector2(0.8, 0.8)

[node name="actor_timer" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="enemy_generator_timer" type="Timer" parent="."]
autostart = true

[node name="player" parent="." instance=ExtResource("2_21n7v")]

[node name="enmey_container" parent="." instance=ExtResource("3_bncns")]
z_index = 2

[connection signal="timeout" from="actor_timer" to="." method="_on_actor_timer_timeout"]
[connection signal="timeout" from="enemy_generator_timer" to="." method="_on_enemy_generator_timer_timeout"]
